--- a/P3/index.html
+++ b/P3/index.html
@@ -12,9 +12,17 @@
         <h1>Ohmyfood</h1>
     </header>
     <main>
+        <section class="location">
+            <i class="fa-solid fa-location-dot"></i>
+            <p>Paris, Belleville</p>
+        </section>
+        <section class="reservation">
+            <h2>Réservez le menu qui vous convient</h2>
+            <p>Découvrez des resaurant d'exception, sélectionné pas nos soins</p>
+            <button class="explore-resto">Explorer mos resaurant</button>
+        </section>
         <section class="fonctionnement">
             <h2>Fonctionnement</h2>
-
             <div class="container">
                 <div class="fonctionnement-box">
                     <span>1</span>
@@ -35,8 +43,52 @@
                 </div>
             </div>
         </section>
+        <section class="restaurant">
+            <h2>Restaurants</h2>
+            <div class="container">
+                <div class="restaurant-box">
+                    <div class="resto-align-item">
+                        <h2>La palette de goût</h2>
+                        <i class="fas fa-heart"></i>
+                        </div>
+                    <p>Ménilmontnant</p>
+                </div>
+                <div class="restaurant-box">
+                    <div class="resto-align-item">
+                            <h2>La note enchantée</h2>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    <p>Charonne</p>
+                </div>
+                <div class="restaurant-box">
+                    <div class="resto-align-item">
+                        <h2>A la française</h2>
+                        <i class="fas fa-heart"></i>
+                    </div>
+                    <p>cité Rouge</p>
+                </div>
+                <div class="restaurant-box">
+                    <div class="resto-align-item">
+                        <h2>Le délice des sens</h2>
+                        <i class="fas fa-heart"></i>
+                    </div>
+                    <p>Folie-Méricourt</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
+        <h2>Ohmyfood</h2>
+        <div class="footerLineWithIcon">
+            <i class="fa-solid fa-utensils"></i>
+            <p>Proposer un restaurant</p>
+        </div>
+        <div class="footerLineWithIcon">
+            <i class="fa-solid fa-handshake-angle"></i>
+            <p>Devenir partenaire</p>
+        </div>
+        <p>Mentions légales</p>
+        <p>Contact</p>
     </footer>
 </body>
 </html>
