--- a/P3/index.html
+++ b/P3/index.html
@@ -47,11 +47,16 @@
             <h2>Restaurants</h2>
             <div class="container">
                 <div class="restaurant-box">
-                    <div class="resto-align-item">
-                        <h2>La palette de goût</h2>
-                        <i class="fas fa-heart"></i>
+                    <img src="./assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
+                    <div class="restaurant-text">
+                        <div class="resto-align-item">
+                            
+                            <h2>La palette de goût</h2>
+                            <i class="fas fa-heart"></i>
                         </div>
-                    <p>Ménilmontnant</p>
+                        <p>Ménilmontnant</p>
+                    </div>
+                    <span>Nouveau</span>
                 </div>
                 <div class="restaurant-box">
                     <div class="resto-align-item">
