--- a/P3/index.html
+++ b/P3/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
         <h1>Ohmyfood</h1>
@@ -29,13 +33,13 @@
                     <i class="fa-solid fa-mobile-screen-button"></i>
                     <p>Choisissez un restaurant</p>
                 </div>
-                <br/>
+                <br />
                 <div class="fonctionnement-box">
                     <span>2</span>
                     <i class="fa-solid fa-list-ul"></i>
                     <p>Composez votre menu</p>
                 </div>
-                <br/>
+                <br />
                 <div class="fonctionnement-box">
                     <span>3</span>
                     <i class="fa-solid fa-store"></i>
@@ -50,34 +54,52 @@
                     <img src="./assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
                     <div class="restaurant-text">
                         <div class="resto-align-item">
-                            
                             <h2>La palette de goût</h2>
-                            <i class="fas fa-heart"></i>
+                            <div class="favoris">
+                                <i class="fa-regular fa-heart" aria-hidden="true"> </i>
+                                <i class="fa-solid fa-square-full rideau" aria-hidden="true"></i>
+                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                            </div>
+
+                            <!--<i class="fas fa-heart"></i>-->
                         </div>
                         <p>Ménilmontnant</p>
                     </div>
                     <span>Nouveau</span>
                 </div>
                 <div class="restaurant-box">
-                    <div class="resto-align-item">
+                    <img src="./assets/restaurants/img-rest-2.jpg" alt="image restaurant 1">
+                    <div class="restaurant-text">
+                        <div class="resto-align-item">
                             <h2>La note enchantée</h2>
                             <i class="fas fa-heart"></i>
                         </div>
-                    <p>Charonne</p>
+                        <p>Charonne</p>
+                    </div>
+                    <span>Nouveau</span>
                 </div>
                 <div class="restaurant-box">
-                    <div class="resto-align-item">
-                        <h2>A la française</h2>
-                        <i class="fas fa-heart"></i>
+                    <img src="./assets/restaurants/img-rest-3.jpg" alt="image restaurant 1">
+                    <div class="restaurant-text">
+
+                        <div class="resto-align-item">
+                            <h2>A la française</h2>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <p>cité Rouge</p>
                     </div>
-                    <p>cité Rouge</p>
+                    <span>Nouveau</span>
                 </div>
                 <div class="restaurant-box">
-                    <div class="resto-align-item">
-                        <h2>Le délice des sens</h2>
-                        <i class="fas fa-heart"></i>
+                    <img src="./assets/restaurants/img-rest-4.jpg" alt="image restaurant 1">
+                    <div class="restaurant-text">
+                        <div class="resto-align-item">
+                            <h2>Le délice des sens</h2>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <p>Folie-Méricourt</p>
                     </div>
-                    <p>Folie-Méricourt</p>
+                    <span>Nouveau</span>
                 </div>
             </div>
         </section>
@@ -87,6 +109,7 @@
         <div class="footerLineWithIcon">
             <i class="fa-solid fa-utensils"></i>
             <p>Proposer un restaurant</p>
+            <span>Nouveau</span>
         </div>
         <div class="footerLineWithIcon">
             <i class="fa-solid fa-handshake-angle"></i>
@@ -96,4 +119,5 @@
         <p>Contact</p>
     </footer>
 </body>
+
 </html>
