--- a/P3/index.html
+++ b/P3/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <div id="loader">
+        <div class="circle"></div>
+    </div>
     <header>
         <h1>Ohmyfood</h1>
     </header>
@@ -51,32 +54,36 @@
             <h2>Restaurants</h2>
             <div class="container">
                 <div class="restaurant-box">
-                    <img src="./assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
-                    <div class="restaurant-text">
-                        <div class="resto-align-item">
-                            <h2>La palette de goût</h2>
-                            <div class="favoris">
-                                <i class="fa-regular fa-heart" aria-hidden="true"> </i>
-                                <i class="fa-solid fa-square-full rideau" aria-hidden="true"></i>
-                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
-                            </div>
+                    <a href="/restaurantPages/aLaFrancaise.html">
+                        <img src="./assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
+                        <div class="restaurant-text">
+                            <div class="resto-align-item">
+                                <h2>La palette de goût</h2>
+                                <div class="favoris">
+                                    <i class="fa-regular fa-heart" aria-hidden="true"> </i>
+                                    <i class="fa-solid fa-square-full rideau" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                </div>
 
-                            <!--<i class="fas fa-heart"></i>-->
+                                <!--<i class="fas fa-heart"></i>-->
+                            </div>
+                            <p>Ménilmontnant</p>
                         </div>
-                        <p>Ménilmontnant</p>
-                    </div>
-                    <span>Nouveau</span>
+                        <span>Nouveau</span>
+                    </a>
                 </div>
                 <div class="restaurant-box">
-                    <img src="./assets/restaurants/img-rest-2.jpg" alt="image restaurant 1">
-                    <div class="restaurant-text">
-                        <div class="resto-align-item">
-                            <h2>La note enchantée</h2>
-                            <i class="fas fa-heart"></i>
+                    <a href="/restaurantPages/aLaFrancaise.html">
+                        <img src="./assets/restaurants/img-rest-2.jpg" alt="image restaurant 1">
+                        <div class="restaurant-text">
+                            <div class="resto-align-item">
+                                <h2>La note enchantée</h2>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                            <p>Charonne</p>
                         </div>
-                        <p>Charonne</p>
-                    </div>
-                    <span>Nouveau</span>
+                        <span>Nouveau</span>
+                    </a>
                 </div>
                 <div class="restaurant-box">
                     <img src="./assets/restaurants/img-rest-3.jpg" alt="image restaurant 1">
