--- a/P3/index.html
+++ b/P3/index.html
@@ -113,17 +113,18 @@
     </main>
     <footer>
         <h2>Ohmyfood</h2>
-        <div class="footerLineWithIcon">
-            <i class="fa-solid fa-utensils"></i>
-            <p>Proposer un restaurant</p>
-            <span>Nouveau</span>
+        <div class="footer-container">
+            <div class="footerLineWithIcon">
+                <i class="fa-solid fa-utensils"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footerLineWithIcon">
+                <i class="fa-solid fa-handshake-angle"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <p>Contact</p>
         </div>
-        <div class="footerLineWithIcon">
-            <i class="fa-solid fa-handshake-angle"></i>
-            <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <p>Contact</p>
     </footer>
 </body>
 
