--- a/P3/restaurantPages/aLaFrancaise.html
+++ b/P3/restaurantPages/aLaFrancaise.html
@@ -1,10 +1,35 @@
 <html>
-    <head>
-        <title>Redirection en HTML</title>
-        <link rel="stylesheet" href="../css/style.css">
-    </head>
 
-    <body>
-        dsefegr
-    </body>
+<head>
+    <title>Redirection en HTML</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/restaurants-pages.css">
+</head>
+
+<body>
+    <header>
+        <a href="../index.html">
+            <i class="fa-solid fa-arrow-left"></i>
+        </a>
+        <h1>Ohmyfood</h1>
+    </header>
+    <main>
+        <img src="../assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
+        <div class="restaurant-card">
+            dsefegr
+            <div class="card-plat">
+                sdvvgfd
+            </div>
+            <div class="card-plat">
+                rtet
+            </div>
+            <div class="card-plat">
+                tret
+            </div>
+        </div>
+    </main>
+</body>
+
 </html>
