--- a/P3/restaurantPages/aLaFrancaise.html
+++ b/P3/restaurantPages/aLaFrancaise.html
@@ -18,18 +18,163 @@
     <main>
         <img src="../assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
         <div class="restaurant-card">
-            dsefegr
-            <div class="card-plat">
-                sdvvgfd
+            <div class="top-menu">
+                <h1>A la française</h1>
+                <div class="favoris">
+                    <i class="fa-regular fa-heart" aria-hidden="true"> </i>
+                    <i class="fa-solid fa-square-full rideau" aria-hidden="true"></i>
+                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                </div>
             </div>
-            <div class="card-plat">
-                rtet
+            <h2>ENTREES</h2>
+            <div class="container">
+                <div class="card1">
+                    <div class="card-content">
+                        <b>Tatare de poulpe acidulé</b>
+                        <div class="under-plat">
+                            <div class="under-dish">
+                                <p>Aux zests d'orange</p>
+                                <b>25€</b>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <i class="fa-regular fa-circle-check"></i>
+                    </div>
+                </div>
+                <div class="card1">
+                    <div class="card-content">
+                        <b>Tatare de poulpe acidulé</b>
+                        <div class="under-plat">
+                            <div class="under-dish">
+                                <p>Aux zests d'orange</p>
+                                <b>35€</b>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <i class="fa-regular fa-circle-check"></i>
+                    </div>
+                </div>
+                <div class="card1">
+                    <div class="card-content">
+                        <b>Tatare de poulpe acidulé</b>
+                        <div class="under-plat">
+                            <div class="under-dish">
+                                <p>Aux zests d'orange</p>
+                                <b>20€</b>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <i class="fa-regular fa-circle-check"></i>
+                    </div>
+                </div>
             </div>
-            <div class="card-plat">
-                tret
+            <h2>PLATS</h2>
+            <div class="card1">
+                <div class="card-content">
+                    <b>Tatare de poulpe acidulé</b>
+                    <div class="under-plat">
+                        <div class="under-dish">
+                            <p>Aux zests d'orange</p>
+                            <b>18€</b>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel">
+                    <i class="fa-regular fa-circle-check"></i>
+                </div>
+            </div>
+            <div class="card1">
+                <div class="card-content">
+                    <b>Tatare de poulpe acidulé</b>
+                    <div class="under-plat">
+                        <div class="under-dish">
+                            <p>Aux zests d'orange</p>
+                            <b>22€</b>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel">
+                    <i class="fa-regular fa-circle-check"></i>
+                </div>
+            </div>
+            <div class="card1">
+                <div class="card-content">
+                    <b>Tatare de poulpe acidulé</b>
+                    <div class="under-plat">
+                        <div class="under-dish">
+                            <p>Aux zests d'orange</p>
+                            <b>23€</b>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel">
+                    <i class="fa-regular fa-circle-check"></i>
+                </div>
+            </div>
+        <br>
+        <h2>DESSERTS</h2>
+        <div class="card1">
+            <div class="card-content">
+                <b>Tatare de poulpe acidulé</b>
+                <div class="under-plat">
+                    <div class="under-dish">
+                        <p>Aux zests d'orange</p>
+                        <b>18€</b>
+                    </div>
+                </div>
+            </div>
+            <div class="panel">
+                <i class="fa-regular fa-circle-check"></i>
             </div>
         </div>
+        <div class="card1">
+            <div class="card-content">
+                <b>Tatare de poulpe acidulé</b>
+                <div class="under-plat">
+                    <div class="under-dish">
+                        <p>Aux zests d'orange</p>
+                        <b>22€</b>
+                    </div>
+                </div>
+            </div>
+            <div class="panel">
+                <i class="fa-regular fa-circle-check"></i>
+            </div>
+        </div>
+        <div class="card1">
+            <div class="card-content">
+                <b>Tatare de poulpe acidulé</b>
+                <div class="under-plat">
+                    <div class="under-dish">
+                        <p>Aux zests d'orange</p>
+                        <b>23€</b>
+                    </div>
+                </div>
+            </div>
+            <div class="panel">
+                <i class="fa-regular fa-circle-check"></i>
+            </div>
+        </div>
+        </div> 
     </main>
+    <footer>
+        <h2>Ohmyfood</h2>
+        <div class="footer-container">
+            <div class="footerLineWithIcon">
+                <i class="fa-solid fa-utensils"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footerLineWithIcon">
+                <i class="fa-solid fa-handshake-angle"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <p>Contact</p>
+        </div>
+    </footer>
 </body>
 
 </html>
