Correction: display of the green animation that appear on hover

--- a/P3/restaurantPages/aLaFrancaise.html
+++ b/P3/restaurantPages/aLaFrancaise.html
@@ -26,139 +26,146 @@
                     <i class="fa-solid fa-heart" aria-hidden="true"></i>
                 </div>
             </div>
-            <h2>ENTREES</h2>
-            <div class="container">
-                <div class="card1">
-                    <div class="card-content">
-                        <b>Tatare de poulpe acidulé</b>
-                        <div class="under-plat">
-                            <div class="under-dish">
-                                <p>Aux zests d'orange</p>
-                                <b>25€</b>
+            <section class="menus">
+                <div class="menu-type">
+                    <h2>ENTREES</h2>
+
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Tatare de poulpe acidulé</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Aux zests d'orange</p>
+                                    <b>25€</b>
+                                </div>
                             </div>
                         </div>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                    <div class="panel">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="card1">
-                    <div class="card-content">
-                        <b>Tatare de poulpe acidulé</b>
-                        <div class="under-plat">
-                            <div class="under-dish">
-                                <p>Aux zests d'orange</p>
-                                <b>35€</b>
+
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Tatare de poulpe acidulé</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Aux zests d'orange</p>
+                                    <b>35€</b>
+                                </div>
                             </div>
                         </div>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                    <div class="panel">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="card1">
-                    <div class="card-content">
-                        <b>Tatare de poulpe acidulé</b>
-                        <div class="under-plat">
-                            <div class="under-dish">
-                                <p>Aux zests d'orange</p>
-                                <b>20€</b>
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Tatare de poulpe acidulé</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Aux zests d'orange</p>
+                                    <b>20€</b>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="panel">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-            </div>
-            <h2>PLATS</h2>
-            <div class="card1">
-                <div class="card-content">
-                    <b>Tatare de poulpe acidulé</b>
-                    <div class="under-plat">
-                        <div class="under-dish">
-                            <p>Aux zests d'orange</p>
-                            <b>18€</b>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
-                <div class="panel">
-                    <i class="fa-regular fa-circle-check"></i>
-                </div>
-            </div>
-            <div class="card1">
-                <div class="card-content">
-                    <b>Tatare de poulpe acidulé</b>
-                    <div class="under-plat">
-                        <div class="under-dish">
-                            <p>Aux zests d'orange</p>
-                            <b>22€</b>
+                <div class="menu-type">
+                    <h2>PLATS</h2>
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Tatare de poulpe acidulé</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Aux zests d'orange</p>
+                                    <b>18€</b>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Tatare de poulpe acidulé</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Aux zests d'orange</p>
+                                    <b>22€</b>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Tatare de poulpe acidulé</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Aux zests d'orange</p>
+                                    <b>23€</b>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
-                <div class="panel">
-                    <i class="fa-regular fa-circle-check"></i>
-                </div>
-            </div>
-            <div class="card1">
-                <div class="card-content">
-                    <b>Tatare de poulpe acidulé</b>
-                    <div class="under-plat">
-                        <div class="under-dish">
-                            <p>Aux zests d'orange</p>
-                            <b>23€</b>
+                <div class="menu-type">
+                    <h2>DESSERTS</h2>
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Tatare de poulpe acidulé</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Aux zests d'orange</p>
+                                    <b>18€</b>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Tatare de poulpe acidulé</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Aux zests d'orange</p>
+                                    <b>22€</b>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Tatare de poulpe acidulé</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Aux zests d'orange</p>
+                                    <b>23€</b>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                 </div>
-                <div class="panel">
-                    <i class="fa-regular fa-circle-check"></i>
-                </div>
-            </div>
-        <br>
-        <h2>DESSERTS</h2>
-        <div class="card1">
-            <div class="card-content">
-                <b>Tatare de poulpe acidulé</b>
-                <div class="under-plat">
-                    <div class="under-dish">
-                        <p>Aux zests d'orange</p>
-                        <b>18€</b>
-                    </div>
-                </div>
-            </div>
-            <div class="panel">
-                <i class="fa-regular fa-circle-check"></i>
-            </div>
+            </section>
         </div>
-        <div class="card1">
-            <div class="card-content">
-                <b>Tatare de poulpe acidulé</b>
-                <div class="under-plat">
-                    <div class="under-dish">
-                        <p>Aux zests d'orange</p>
-                        <b>22€</b>
-                    </div>
-                </div>
-            </div>
-            <div class="panel">
-                <i class="fa-regular fa-circle-check"></i>
-            </div>
-        </div>
-        <div class="card1">
-            <div class="card-content">
-                <b>Tatare de poulpe acidulé</b>
-                <div class="under-plat">
-                    <div class="under-dish">
-                        <p>Aux zests d'orange</p>
-                        <b>23€</b>
-                    </div>
-                </div>
-            </div>
-            <div class="panel">
-                <i class="fa-regular fa-circle-check"></i>
-            </div>
-        </div>
-        </div> 
     </main>
     <footer>
         <h2>Ohmyfood</h2>
