Created every pages for all restaurant, menu display still need to be corrected

--- a/P3/index.html
+++ b/P3/index.html
@@ -54,7 +54,7 @@
             <h2>Restaurants</h2>
             <div class="container">
                 <div class="restaurant-box">
-                    <a href="/restaurantPages/aLaFrancaise.html">
+                    <a href="/restaurantPages/lapalettedugout.html">
                         <img src="./assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
                         <div class="restaurant-text">
                             <div class="resto-align-item">
@@ -73,12 +73,16 @@
                     </a>
                 </div>
                 <div class="restaurant-box">
-                    <a href="/restaurantPages/aLaFrancaise.html">
+                    <a href="/restaurantPages/lanoteenchante.html">
                         <img src="./assets/restaurants/img-rest-2.jpg" alt="image restaurant 1">
                         <div class="restaurant-text">
                             <div class="resto-align-item">
                                 <h2>La note enchantée</h2>
-                                <i class="fas fa-heart"></i>
+                                <div class="favoris">
+                                    <i class="fa-regular fa-heart" aria-hidden="true"> </i>
+                                    <i class="fa-solid fa-square-full rideau" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                </div>
                             </div>
                             <p>Charonne</p>
                         </div>
@@ -86,27 +90,39 @@
                     </a>
                 </div>
                 <div class="restaurant-box">
-                    <img src="./assets/restaurants/img-rest-3.jpg" alt="image restaurant 1">
-                    <div class="restaurant-text">
+                    <a href="/restaurantPages/aLaFrancaise.html">
+                        <img src="./assets/restaurants/img-rest-3.jpg" alt="image restaurant 1">
+                        <div class="restaurant-text">
 
-                        <div class="resto-align-item">
-                            <h2>A la française</h2>
-                            <i class="fas fa-heart"></i>
+                            <div class="resto-align-item">
+                                <h2>A la française</h2>
+                                <div class="favoris">
+                                    <i class="fa-regular fa-heart" aria-hidden="true"> </i>
+                                    <i class="fa-solid fa-square-full rideau" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <p>cité Rouge</p>
                         </div>
-                        <p>cité Rouge</p>
-                    </div>
-                    <span>Nouveau</span>
+                        <span>Nouveau</span>
+                    </a>
                 </div>
                 <div class="restaurant-box">
-                    <img src="./assets/restaurants/img-rest-4.jpg" alt="image restaurant 1">
-                    <div class="restaurant-text">
-                        <div class="resto-align-item">
-                            <h2>Le délice des sens</h2>
-                            <i class="fas fa-heart"></i>
+                    <a href="/restaurantPages/ledelicedessens.html">
+                        <img src="./assets/restaurants/img-rest-4.jpg" alt="image restaurant 1">
+                        <div class="restaurant-text">
+                            <div class="resto-align-item">
+                                <h2>Le délice des sens</h2>
+                                <div class="favoris">
+                                    <i class="fa-regular fa-heart" aria-hidden="true"> </i>
+                                    <i class="fa-solid fa-square-full rideau" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <p>Folie-Méricourt</p>
                         </div>
-                        <p>Folie-Méricourt</p>
-                    </div>
-                    <span>Nouveau</span>
+                        <span>Nouveau</span>
+                    </a>
                 </div>
             </div>
         </section>
