Correction of menu display in 'la pelette de gout' command page

--- a/P3/restaurantPages/aLaFrancaise.html
+++ b/P3/restaurantPages/aLaFrancaise.html
@@ -28,7 +28,7 @@
             </div>
             <section class="menus">
                 <div class="menu-type">
-                    <h2>ENTREES</h2>
+                    <h2>ENTRÉES</h2>
 
                     <div class="card-menu">
                         <div class="card-content">
