--- a/P3/restaurantPages/lapalettedugout.html
+++ b/P3/restaurantPages/lapalettedugout.html
@@ -28,14 +28,14 @@
             </div>
             <section class="menus">
                 <div class="menu-type">
-                    <h2>ENTREES</h2>
+                    <h2>ENTRÉES</h2>
 
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Fricassée d'escargot</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Au piment d'Espelette</p>
                                     <b>25€</b>
                                 </div>
                             </div>
@@ -47,10 +47,10 @@
 
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Foie gras de canard mi-cuit</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Et ses copeaux de truffe noire</p>
                                     <b>35€</b>
                                 </div>
                             </div>
@@ -61,10 +61,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Oeuf au plat</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Assaisonné à la truffe sur lit de caviar</p>
                                     <b>20€</b>
                                 </div>
                             </div>
@@ -78,11 +78,11 @@
                     <h2>PLATS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Filet de boeuf aux herbes</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>18€</b>
+                                    <p>Accompagné de sa ribambelle de légumes</p>
+                                    <b>40€</b>
                                 </div>
                             </div>
                         </div>
@@ -92,11 +92,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Parmentier de queue de boeuf</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>22€</b>
+                                    <p>À la truffe noire sur sa purée de panais</p>
+                                    <b>35€</b>
                                 </div>
                             </div>
                         </div>
@@ -106,11 +106,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Filet de turbot</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>23€</b>
+                                    <p>Aux agrumes</p>
+                                    <b>44€</b>
                                 </div>
                             </div>
                         </div>
@@ -123,10 +123,10 @@
                     <h2>DESSERTS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Paris-Brest</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Revisité</p>
                                     <b>18€</b>
                                 </div>
                             </div>
@@ -137,10 +137,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Macaron au chocolat d'exception</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Et glace à la vanille de Madagascar</p>
                                     <b>22€</b>
                                 </div>
                             </div>
@@ -151,10 +151,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Mousse au chocolat</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Au piment d'Espelette et à la truffe noire</p>
                                     <b>23€</b>
                                 </div>
                             </div>
