Correction of img display in 'La palette du goût'

--- a/P3/restaurantPages/lanoteenchante.html
+++ b/P3/restaurantPages/lanoteenchante.html
@@ -16,7 +16,7 @@
         <h1>Ohmyfood</h1>
     </header>
     <main>
-        <img src="../assets/restaurants/img-rest-2.jpg" alt="image restaurant 1">
+        <img src="../assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
         <div class="restaurant-card">
             <div class="top-menu">
                 <h1>La palette du goût</h1>
@@ -28,7 +28,7 @@
             </div>
             <section class="menus">
                 <div class="menu-type">
-                    <h2>ENTREES</h2>
+                    <h2>ENTRÉES</h2>
 
                     <div class="card-menu">
                         <div class="card-content">
