Add button commander and all the 4 restaurants pages

--- a/P3/restaurantPages/ledelicedessens.html
+++ b/P3/restaurantPages/ledelicedessens.html
@@ -32,10 +32,10 @@
 
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Tartare de thon</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Assaisonné au yuzu</p>
                                     <b>25€</b>
                                 </div>
                             </div>
@@ -47,10 +47,10 @@
 
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Bouchée de homard croustillant </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Et sa farandole de petits légumes</p>
                                     <b>35€</b>
                                 </div>
                             </div>
@@ -61,11 +61,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Velouté de cèpes </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>20€</b>
+                                    <p>Aux truffes</p>
+                                    <b>40€</b>
                                 </div>
                             </div>
                         </div>
@@ -78,11 +78,11 @@
                     <h2>PLATS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Poulet rôti aux herbes de Provence </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>18€</b>
+                                    <p>Et sa crème de truffe</p>
+                                    <b>40€</b>
                                 </div>
                             </div>
                         </div>
@@ -92,11 +92,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Langouste rôtie </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>22€</b>
+                                    <p>Et ses légumes de saison</p>
+                                    <b>35€</b>
                                 </div>
                             </div>
                         </div>
@@ -106,11 +106,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Côte de boeuf Angus </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>23€</b>
+                                    <p>Et sa purée de panais</p>
+                                    <b>44€</b>
                                 </div>
                             </div>
                         </div>
@@ -123,10 +123,10 @@
                     <h2>DESSERTS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Farandole de desserts</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Du chef</p>
                                     <b>18€</b>
                                 </div>
                             </div>
@@ -137,10 +137,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Crème brulée</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Revisitée</p>
                                     <b>22€</b>
                                 </div>
                             </div>
@@ -151,10 +151,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Tiramisu</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>À la noisette</p>
                                     <b>23€</b>
                                 </div>
                             </div>
