--- a/P3/restaurantPages/aLaFrancaise.html
+++ b/P3/restaurantPages/aLaFrancaise.html
@@ -47,10 +47,10 @@
 
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Velouté de légumes d'antan</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Carotte, panais, topinambour</p>
                                     <b>35€</b>
                                 </div>
                             </div>
@@ -61,10 +61,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Soupe à l'oignon</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Revisitée</p>
                                     <b>20€</b>
                                 </div>
                             </div>
@@ -78,11 +78,11 @@
                     <h2>PLATS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Coquilles Saint-Jacques</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>18€</b>
+                                    <p>Accompagnées d'une purée de panais</p>
+                                    <b>40€</b>
                                 </div>
                             </div>
                         </div>
@@ -92,11 +92,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Magret de canard</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>22€</b>
+                                    <p>Et parmentier de pommes de terre</p>
+                                    <b>35€</b>
                                 </div>
                             </div>
                         </div>
@@ -106,11 +106,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Pigeonneau d’Ille-et-Vilaine</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>23€</b>
+                                    <p>Sur son lit de gnocchis aux légumes</p>
+                                    <b>44€</b>
                                 </div>
                             </div>
                         </div>
@@ -123,10 +123,10 @@
                     <h2>DESSERTS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Pétales de violettes glacés</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Et purée de noisettes</p>
                                     <b>18€</b>
                                 </div>
                             </div>
@@ -137,10 +137,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Fondant au chocolat</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Revisité</p>
                                     <b>22€</b>
                                 </div>
                             </div>
@@ -151,10 +151,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Millefeuille croustillant</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Myrtilles et pâte d’amande</p>
                                     <b>23€</b>
                                 </div>
                             </div>
@@ -163,6 +163,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
+                    
                 </div>
             </section>
         </div>
