--- a/P3/restaurantPages/lanoteenchante.html
+++ b/P3/restaurantPages/lanoteenchante.html
@@ -32,10 +32,10 @@
 
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Ravioles de foie gras</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Accompagnés de leur crème à la truffe</p>
                                     <b>25€</b>
                                 </div>
                             </div>
@@ -47,10 +47,10 @@
 
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Caviar osciètre</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Sur blini à la farine de blé noir</p>
                                     <b>35€</b>
                                 </div>
                             </div>
@@ -61,11 +61,25 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Homard et espuma de potiron</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Mariné aux zestes d'orange</p>
                                     <b>20€</b>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="card-menu">
+                        <div class="card-content">
+                            <b>Foie gras de canard cuit entier</b>
+                            <div class="under-plat">
+                                <div class="under-dish">
+                                    <p>Confiture de figue et pain toasté</p>
+                                    <b>35€</b>
                                 </div>
                             </div>
                         </div>
@@ -78,11 +92,11 @@
                     <h2>PLATS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Noix de coquilles Saint-Jacques</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>18€</b>
+                                    <p>Sur lit de purée de céleri-rave</p>
+                                    <b>40€</b>
                                 </div>
                             </div>
                         </div>
@@ -92,11 +106,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Langoustine poêlée</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>22€</b>
+                                    <p>Purée de patate douce</p>
+                                    <b>35€</b>
                                 </div>
                             </div>
                         </div>
@@ -106,11 +120,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Mijoté de queue de boeuf</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
-                                    <b>23€</b>
+                                    <p>Et riz sauvage aux zestes de citron</p>
+                                    <b>44€</b>
                                 </div>
                             </div>
                         </div>
@@ -123,10 +137,10 @@
                     <h2>DESSERTS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Macaron noisette et chocolat</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Glace au caramel brun et sel de Guérande</p>
                                     <b>18€</b>
                                 </div>
                             </div>
@@ -137,10 +151,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Baba au rhum revisité</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Avec son coulis de citron</p>
                                     <b>22€</b>
                                 </div>
                             </div>
@@ -151,10 +165,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Tarte au citron meringuée</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Déstructurée</p>
                                     <b>23€</b>
                                 </div>
                             </div>
