--- a/restaurantPages/lanoteenchante.html
+++ b/restaurantPages/lanoteenchante.html
@@ -180,6 +180,7 @@
                 </div>
             </section>
         </div>
+        <button class="command">Commander</button>
     </main>
     <footer>
         <h2>Ohmyfood</h2>
