--- a/restaurantPages/ledelicedessens.html
+++ b/restaurantPages/ledelicedessens.html
@@ -16,10 +16,10 @@
         <h1>Ohmyfood</h1>
     </header>
     <main>
-        <img src="../assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
+        <img src="../assets/restaurants/img-rest-4.jpg" alt="image restaurant 1">
         <div class="restaurant-card">
             <div class="top-menu">
-                <h1>A la française</h1>
+                <h1>Le délice des sens</h1>
                 <div class="favoris">
                     <i class="fa-regular fa-heart" aria-hidden="true"> </i>
                     <i class="fa-solid fa-square-full rideau" aria-hidden="true"></i>
@@ -32,10 +32,10 @@
 
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Tatare de poulpe acidulé</b>
+                            <b>Tartare de thon</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Aux zests d'orange</p>
+                                    <p>Assaisonné au yuzu</p>
                                     <b>25€</b>
                                 </div>
                             </div>
@@ -47,10 +47,10 @@
 
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Velouté de légumes d'antan</b>
+                            <b>Bouchée de homard croustillant </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Carotte, panais, topinambour</p>
+                                    <p>Et sa farandole de petits légumes</p>
                                     <b>35€</b>
                                 </div>
                             </div>
@@ -61,11 +61,11 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Soupe à l'oignon</b>
+                            <b>Velouté de cèpes </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Revisitée</p>
-                                    <b>20€</b>
+                                    <p>Aux truffes</p>
+                                    <b>40€</b>
                                 </div>
                             </div>
                         </div>
@@ -78,10 +78,10 @@
                     <h2>PLATS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Coquilles Saint-Jacques</b>
+                            <b>Poulet rôti aux herbes de Provence </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Accompagnées d'une purée de panais</p>
+                                    <p>Et sa crème de truffe</p>
                                     <b>40€</b>
                                 </div>
                             </div>
@@ -92,10 +92,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Magret de canard</b>
+                            <b>Langouste rôtie </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Et parmentier de pommes de terre</p>
+                                    <p>Et ses légumes de saison</p>
                                     <b>35€</b>
                                 </div>
                             </div>
@@ -106,10 +106,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Pigeonneau d’Ille-et-Vilaine</b>
+                            <b>Côte de boeuf Angus </b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Sur son lit de gnocchis aux légumes</p>
+                                    <p>Et sa purée de panais</p>
                                     <b>44€</b>
                                 </div>
                             </div>
@@ -123,10 +123,10 @@
                     <h2>DESSERTS</h2>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Pétales de violettes glacés</b>
+                            <b>Farandole de desserts</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Et purée de noisettes</p>
+                                    <p>Du chef</p>
                                     <b>18€</b>
                                 </div>
                             </div>
@@ -137,10 +137,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Fondant au chocolat</b>
+                            <b>Crème brulée</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Revisité</p>
+                                    <p>Revisitée</p>
                                     <b>22€</b>
                                 </div>
                             </div>
@@ -151,10 +151,10 @@
                     </div>
                     <div class="card-menu">
                         <div class="card-content">
-                            <b>Millefeuille croustillant</b>
+                            <b>Tiramisu</b>
                             <div class="under-plat">
                                 <div class="under-dish">
-                                    <p>Myrtilles et pâte d’amande</p>
+                                    <p>À la noisette</p>
                                     <b>23€</b>
                                 </div>
                             </div>
@@ -163,7 +163,6 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    
                 </div>
             </section>
         </div>
@@ -182,6 +181,7 @@
             <p>Mentions légales</p>
             <p>Contact</p>
         </div>
+        <button class="command">Commander</button>
     </footer>
 </body>
 
