--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                 <div class="fonctionnement-box">
                     <span>3</span>
                     <i class="fa-solid fa-store"></i>
-                    <p>Déguustez au restaurant</p>
+                    <p>Dégustez au restaurant</p>
                 </div>
             </div>
         </section>
