Correction of the path for restaurant's pages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2>Restaurants</h2>
             <div class="container">
                 <div class="restaurant-box">
-                    <a href="/restaurantPages/lapalettedugout.html">
+                    <a href="./restaurantPages/lapalettedugout.html">
                         <img src="./assets/restaurants/img-rest-1.jpg" alt="image restaurant 1">
                         <div class="restaurant-text">
                             <div class="resto-align-item">
@@ -73,7 +73,7 @@
                     </a>
                 </div>
                 <div class="restaurant-box">
-                    <a href="/restaurantPages/lanoteenchante.html">
+                    <a href="./restaurantPages/lanoteenchante.html">
                         <img src="./assets/restaurants/img-rest-2.jpg" alt="image restaurant 1">
                         <div class="restaurant-text">
                             <div class="resto-align-item">
@@ -90,7 +90,7 @@
                     </a>
                 </div>
                 <div class="restaurant-box">
-                    <a href="/restaurantPages/aLaFrancaise.html">
+                    <a href="./restaurantPages/aLaFrancaise.html">
                         <img src="./assets/restaurants/img-rest-3.jpg" alt="image restaurant 1">
                         <div class="restaurant-text">
 
@@ -108,7 +108,7 @@
                     </a>
                 </div>
                 <div class="restaurant-box">
-                    <a href="/restaurantPages/ledelicedessens.html">
+                    <a href="./restaurantPages/ledelicedessens.html">
                         <img src="./assets/restaurants/img-rest-4.jpg" alt="image restaurant 1">
                         <div class="restaurant-text">
                             <div class="resto-align-item">
